--- a/CRAGIG_run1/Notebooks/IDing_SNPs_for_parentage/First_look_at_SNPs_for_parentage.ipynb
+++ b/CRAGIG_run1/Notebooks/IDing_SNPs_for_parentage/First_look_at_SNPs_for_parentage.ipynb
@@ -2,7 +2,10 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "## First look at SNPs for scallop parentage panel\n",
     "**20170411NL**\n",
@@ -14,9 +17,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 1,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [
     {
@@ -33,9 +38,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 2,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [],
    "source": [
@@ -51,9 +58,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 3,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [],
    "source": [
@@ -65,9 +74,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 4,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [
     {
@@ -86,9 +97,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 5,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [],
    "source": [
@@ -103,9 +116,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 6,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [],
    "source": [
@@ -115,9 +130,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 7,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [],
    "source": [
@@ -138,9 +155,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 8,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [
     {
@@ -169,9 +188,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 9,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [
     {
@@ -208,7 +229,7 @@
     "        \n",
     "num_kept = len(keep_SNPs_30)\n",
     "num_lost = len(lose_SNPs)\n",
-    "total = len(keep_SNPs) + len(lose_SNPs)\n",
+    "total = len(keep_SNPs_30) + len(lose_SNPs)\n",
     "total2 = len(SNP_num_list)\n",
     "\n",
     "if total == total2:\n",
@@ -222,16 +243,21 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "### Here is the list of RAD tag names that have SNPs that are not in the first or last 30 base pairs of the sequence:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 10,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [
     {
@@ -247,17 +273,60 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "13\n",
+      "49\n",
+      "63\n",
+      "71\n",
+      "196\n",
+      "201\n",
+      "291\n",
+      "319\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "# write these to a file, each on its own line, for use down the line\n",
+    "\n",
+    "filestring = \"\"\n",
+    "for SNP in keep_SNPs_30:\n",
+    "    lilstring = str(SNP) + \"\\n\"\n",
+    "    filestring += lilstring\n",
+    "print filestring[0:28]\n",
+    "newfile = open(\"SNP_names_30_cutoff.txt\", \"w\")\n",
+    "newfile.write(filestring)\n",
+    "    "
+   ]
+  },
+  {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "### Here is the list of RAD tag names that have SNPs that are not in the first or last 25 base pairs of the sequence:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 12,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [
     {
@@ -308,9 +377,253 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "collapsed": true,
+    "deletable": true,
+    "editable": true
+   },
    "source": [
-    "## Now, I'd like to take the list of SNPs that made it through the 30 bp cut off, and find their minor allele frequencies"
+    "## Chat with peer\n",
+    "\n",
+    "**20170413**\n",
+    "<br>I chatted with a peer who has built multiple parentage panels for amplicon sequencing, and got some good preliminary advice. Here are somethings I learned:\n",
+    "\n",
+    "* They start with a 30 bp cut off for 100 bp reads, so I think it's safe for me to start with the same. \n",
+    "* If analyzing data at the SNP level, you want a minor allele frequency close to .5. If analyzing data at the haplotype level, many haplotypes can be more informative even though the minor allele frequency can be a bit lower than .5. \n",
+    "* If I want to find out whether rare haplotype is actually just sequencing error/paralog, I can look at the ratio of reads. I'd expect a paralog to be evenly dispersed, like each of 4 alleles having 25% of the reads, or one having 50% and two having 25%. If sequencing error, should be really rare. Could also be worth filtering and saying keep only if haplotype appears in at least X number of individuals, or at least certain depth in an individual. Essentially, recalling genotypes in Marine's script.\n",
+    "* Their amplicon size ranges from 30bp to 100bp. It's okay to have a range of sizes, and I think the limit is just by the sequencing platform.\n",
+    "* Their distribution of minor allele frequencies ranges from .1 to .5ish.\n",
+    "\n",
+    "## Now, I'd like to take the list of SNPs that made it through the 30 bp cut off, and find their minor allele frequencies\n",
+    "\n",
+    "To do this, I need to reformat the post-filtered SNP genepop file to a transposed CSV, then retain only the rows that match the SNPs that meet the 30 bp cut off criteria. Then, I can report back the MAF frequencies.\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "/mnt/hgfs/SHARED_FOLDER/Git_repo/CRAGIG_run1/Scripts/reformatting\n"
+     ]
+    }
+   ],
+   "source": [
+    "cd /mnt/hgfs/SHARED_FOLDER/Git_repo/CRAGIG_run1/Scripts/reformatting/"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "import numpy as np"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
+   },
+   "outputs": [],
+   "source": [
+    "!python pop_gp_to_csv_gp.py \\\n",
+    "-i ../../../../WorkingFolder/Stacks_2/filtered_genepop_files/postMAF_postMV_asGP_20170322.gen \\\n",
+    "-o ../../../../WorkingFolder/Stacks_2/filtered_genepop_files/transGP_snps_post_filter_20170413.csv"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
+   },
+   "outputs": [],
+   "source": [
+    "# get into numpy array\n",
+    "GP = open(\"../../../../WorkingFolder/Stacks_2/filtered_genepop_files/trans\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
+   },
+   "outputs": [],
+   "source": [
+    "lines = GP.readlines()\n",
+    "GP.close()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {
+    "collapsed": true,
+    "deletable": true,
+    "editable": true
+   },
+   "outputs": [],
+   "source": [
+    "array_list = []\n",
+    "for line in lines:\n",
+    "    linelist = line.strip().split(\",\")\n",
+    "    array_list.append(linelist)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "metadata": {
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
+   },
+   "outputs": [],
+   "source": [
+    "file_array = np.array(array_list)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "metadata": {
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[['sample' 'FG001' 'FG002' ..., 'Q354' 'Q355' 'Q356']\n",
+      " ['5_137' '0101' '0101' ..., '0101' '0101' '0101']\n",
+      " ['13_72' '0101' '0101' ..., '0101' '0104' '0404']\n",
+      " ..., \n",
+      " ['77_128' '0202' '0204' ..., '0202' '0202' '0000']\n",
+      " ['79_109' '0404' '0101' ..., '0404' '0104' '0104']\n",
+      " ['80_84' '0303' '0303' ..., '0303' '0303' '0303']]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print file_array"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "metadata": {
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
+   },
+   "outputs": [],
+   "source": [
+    "# get number rows in array, aka number of SNPs in Genepop\n",
+    "num_rows = file_array.shape[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "metadata": {
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "24"
+      ]
+     },
+     "execution_count": 45,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "num_rows"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "metadata": {
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
+   },
+   "outputs": [],
+   "source": [
+    "GP30_list = [] \n",
+    "\n",
+    "count = 0\n",
+    "for i in range(1,num_rows):\n",
+    "    row = file_array[i,]\n",
+    "    snp_name = row[0]\n",
+    "    snp_name\n",
+    "    snp_name_list = snp_name.split(\"_\")\n",
+    "    tag_num = int(snp_name_list[0])\n",
+    "    if tag_num in keep_SNPs_30:\n",
+    "        rowaslist = list(row)\n",
+    "        GP30_list.append(rowaslist)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "metadata": {
+    "collapsed": true,
+    "deletable": true,
+    "editable": true
+   },
+   "outputs": [],
+   "source": [
+    "GP30_array = np.array(GP30_list)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[['13_72' '0101' '0101' '0101' '0101' '0101' '0101' '0101' '0104']\n",
+      " ['63_87' '0404' '0204' '0204' '0204' '0404' '0404' '0404' '0204']\n",
+      " ['63_107' '0204' '0404' '0404' '0404' '0404' '0404' '0404' '0404']]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print GP30_array[0:9,0:9]"
    ]
   },
   {
