--- a/CRAGIG_run1/Notebooks/IDing_SNPs_for_parentage/First_look_at_SNPs_for_parentage.ipynb
+++ b/CRAGIG_run1/Notebooks/IDing_SNPs_for_parentage/First_look_at_SNPs_for_parentage.ipynb
@@ -982,16 +982,28 @@
     "plt.suptitle(\"Distribution of Fis for SNPs in RAD tags \\n with no variation in the first or last 30 bp\")\n",
     "plt.xlabel(\"Fis\")\n",
     "plt.ylabel(\"Frequency\")\n",
+    "\n",
     "plt.show()  "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "collapsed": true,
+    "deletable": true,
+    "editable": true
+   },
+   "source": [
+    "**20170421**\n",
+    "<br>\n",
+    "It looks like there are two distributions here, one with a peak around -.1, the other around .25. I wonder what makes these sets of loci different, and what I could test. And which I need to filter out! I expected one distribution around 0..."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true,
-    "deletable": true,
-    "editable": true
+    "collapsed": true
    },
    "outputs": [],
    "source": []
