--- a/CRAGIG_run1/Notebooks/data_processing/Number_SNPs_versus_number_haplotypes.ipynb
+++ b/CRAGIG_run1/Notebooks/data_processing/Number_SNPs_versus_number_haplotypes.ipynb
@@ -2,7 +2,10 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "## Relationship between number of SNPs and haplotypes\n",
     "\n",
@@ -13,9 +16,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [],
    "source": [
@@ -25,9 +30,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [
     {
@@ -44,9 +51,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [],
    "source": [
@@ -61,9 +70,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [],
    "source": [
@@ -75,9 +86,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 5,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [],
    "source": [
@@ -103,7 +116,7 @@
     "    for un_hap in unique_haps_in_locus:\n",
     "        length = len(un_hap)\n",
     "        lengths.append(length)\n",
-    "    if len(list(set(lengths))) > 1:\n",
+    "    if len(list(set(lengths))) > 1: # should only be one length of hap per row, so print to find errors\n",
     "        print list(set(lengths))\n",
     "        print unique_haps_in_locus\n",
     "    mydict[key] = [unique_haps_in_locus, num_unique_haps, lengths[0]] # each item in dictionary is set of unique haplotypes, number of unique haplotypes, number of SNPs in locus\n",
@@ -121,9 +134,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 13,
    "metadata": {
     "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "image/png": "iVBORw0KGgoAAAANSUhEUgAAAYgAAAEjCAYAAAAomJYLAAAABHNCSVQICAgIfAhkiAAAAAlwSFlz\nAAALEgAACxIB0t1+/AAAIABJREFUeJzt3Xe8HVW5//HPl9AlEkJigBRCiShKEUNR8Eq5KgJSvIAi\nmoBIRCnyE5XoVQEFAZEiP7AgLXQiSJFypYV6aaEmUiRAMAVIKEnoEPLcP9Y6MNnMOWefZM/Zp3zf\nr9d5nT1r2prJyX5mrZl5liICMzOzWks0uwJmZtY1OUCYmVkpBwgzMyvlAGFmZqUcIMzMrJQDhJmZ\nlXKAsIaSdLakI5u0b0k6S9LLku5pRh3qIelPkn7R7Hp0FZL2lHRds+thH+QA0cNJmipplqQPFcq+\nI+nmJlarKlsAXwCGRMQmtTMlLS3peEnTJb2az81JhfntnitJIem1vP4MSSdI6tORSkbEfhHx60U5\nQEk3S3oz7/8FSX+TtGrJcnvlun6tpnxLSQvy+q/mczFe0sZt7HN43taSi1Ln9kTE+RHxxSq2bYvH\nAaJ36AP8oNmV6KiOfvECqwNTI+K1Vub/FBgJbAL0BbYE7q9Zpp5ztUFErABsA3wD2LeD9VxcB+T9\nrw2sAPyuZJnRwEvAqJJ5M/P6fYHNgMeA2yRtU1F9rZtygOgdjgN+JKlf7Yyyq8N8lfqd/HkvSXdI\nOlHSHElPSfpsLp+Wr7hH12x2gKTrJb0i6RZJqxe2/bE87yVJj0vavTDvbEl/lHSNpNeArUrqu5qk\nK/P6UyTtm8v3AU4HPpOvjI8oOQ8bA5dFxMxIpkbEOfWeq1oR8RhwG/DJXIdDc6vilXxspV+4xW64\nfEU/XdIh+Vw+K2nv9vad9z8HuBzYsGb7qwOfB8YAX5K0SivrR0RMj4hfks7dsa3s6tb8e04+t5+R\ntJakmyS9mFsy5xfPmaSNJD2Qz8VfJV3cWtdj/lu6vTAdkvaT9ET+mztVkuo5J9ZYDhC9w0TgZuBH\ni7j+psDDwMrABcBFpC/btYFvAqdIWqGw/J7Ar4EBwIPA+QC56+b6vI2PAF8H/iBp3cK63wCOIl3d\n3s4HXQRMB1YDdgV+I2nriDgD2A+4MyJWiIjDSta9C/ihpO9LWq+VL526z1Wu9+eAByStAxwAbBwR\nfYEvAVPb20a2CrAiMBjYBzhV0kp17H9l4KvAlJpZo4CJEXEp8Cjp36M9fwM2KnavFfxH/t0vn9s7\nAQFHk/4dPg4MBQ7P9VoauAw4G+gPXAjsUkcdinYg/Y2tD+xOOp/WyRwgeo9fAgdKGrgI6z4dEWdF\nxLvAxaQvg19FxFsRcR3wNilYtLg6Im6NiLeA/yZd1Q8l/aefmrc1PyIeAC4Fdiuse0VE3BERCyLi\nzWIl8jY2Bw6NiDcj4kHSlW9ZN0qZo0lXyXuSAsGMktYPtH+u7pf0MvD3vP+zgHeBZYB1JS2VWydP\n1lmvd0jn852IuAZ4FVinjeVPljQXeIEUhA+smT+KFITJv+s5PzNJX/rttpwAImJKRFyf/wZmAyeQ\nWi2Quq2WBE7Ox/Q3oKMPDRwTEXMi4t/ABGpaSdY5HCB6iYiYDFwFjF2E1Z8vfH4jb6+2rNiCmFbY\n76ukvvDVSPcINs3dBnMkzSF9Wa9Stm6J1YCXIuKVQtkzpCvvdkXEuxFxakRsTvoiPAo4U9LHa5Zr\n71xtFBErRcRaEfHzHMymAAeTrqJnSbpI0mr11At4MSLmF6ZfZ+HzWeugiFiRdHW9EjCkZYakzYE1\nSC0tSAFiPUntfcEOBgKYU0+FJQ3KxzhD0jzgPFKwgvTvNCMWzgTa1r9rmecKn9s7H1YRB4je5TDS\nDdXiF2rLDd3lC2WlfdYdMLTlQ+566k+6Qp0G3BIR/Qo/K0TE9wrrtpVeeCbQX1LfQtkwYEZHKxgR\nb0TEqcDLwLoli5Sdq/a2eUFEbEEKhEHrffoNERGTgCNJXVIt3WWjSS2BByU9B9xdKG/LLsD9rdzg\nL/s3+U0uXy8iPkzqamypw7PA4JouvKFYt+MA0Yvkq9yLgYMKZbNJX7DflNRH0reBtRZzV9tJ2iL3\nRf8auCsippGuyj8q6VuSlso/G9dewbdR/2nA/wJHS1pW0vqkPvvz6llf0sH5pvBykpbM3Ut9gQdK\n9vWBc9XOtteRtLWkZYA3Sa2qBfWsu5jGAYOAHSUtS+qvH0Pqkmn5ORD4hmoeU1UyWNJhwHeAn7Wy\nj9mkY1mzUNaX1BU2V9Jg4MeFeXeSutwOyOd5J9KTY9bNOED0Pr8Cam9E7kv6D/4i8AnSl/DiuIB0\nBf4S8GnS1SW5a+iLpJvTM0ndCMeS+u7rtQcwPK9/GXBYRNxQ57qvA8fn/b4A7A/8V0Q81cryZeeq\nNcsAx+TtPke6Cf/TOtddZBHxNvB74BfAzqTAdE5EPNfyA5xJuiewbV5tNUmvkr7g7wXWA7bM95PK\n9vE6qTvujtw1uBlwBLARMBe4mnSTu1inr5KC9xzSv/9VwFuNPHarnjxgkJlVTdLdwJ8i4qxm18Xq\n5xaEmTWcpM9LWqXQlbc+8D/Nrpd1TCWvzptZr7cOMJ7URfcUsGtEPNvcKllHuYvJzMxKuYvJzMxK\nOUBYu/IjnA/mvDoHqcJ01S25iarY9uKQ9D1Jz+dcRCt3wv5q82GVpR2pYr8hae32l7TewPcgrB4/\nASZExGKnO5A0FfhOBx5NbTpJS5FSSWwWEQ81uz5dgaThwNPAUjVvgVsP4haE1WN14J/1LFj7MlYP\nMQhYljrPgVlP4QBhbZJ0Eynt9im5e+WjKk9XfWhO7XCWpAGSrsovVb0k6TZJS0g6l5Qa4+95Wz+p\nY/9jJT2Zu7cekbRLYd5ekm6X9DulUeSelvTlwvwVJZ2hlEJ7hqQj1coYE5KWkXSSpJn556Rc9lHg\n8bzYnHw+atddVtJ5Sqmv50i6V9KgPK+/0ih3M3MdL8/lK+VzNDuXXyVpSO22W6nrZ/M+5ubfny3M\nu1nS0ZLukTRP0hWS+rexrR/n8zNT6S364rztlVJ2z1NK7X54YXaHU4Bb9+MAYW2KiK1JYx4ckPMm\n/atksVVI+ZZWJ6V5OISUknsg6er7Z2lT8S3g38BX8rZ+W0cVniSl1F6R9PbueVp4BLVNSV/gA4Df\nAmdI7+UAOhuYT8o0+ynSW9zfaWU//03KQrohsAEpNcTP8/F+Ii/TL5+PWqNz/YaSUqLvR05qCJxL\nynP1CdLb1Sfm8iVIWWBXJwXNN4BT2jwTpIBDenP55LyvE4Cra+6LjAK+Dayaj//kVra1LSmt+ReA\nEcB/1izyWt5WP2B74HuSds7zOpQC3LonBwhrhAWklBdvRcQbpPTVqwKr53TPt8UiPk8dEX/NA/ws\niIiLgSdYOK/PMxHxl5yKfFze76B8Bb8dcHBEvBYRs0hfzl9vZVd7klJuz8r5qY4AvlVnNd8hfVmv\nnTPG3hcR83Ig+zKwX0S8nM/FLfm4XoyISyPi9ZyC5CjeT5fdlu2BJyLi3Jwy/ULSiHBfKSxzbkRM\nzon3fgHs3krLaXfgrMKyhxdnRsTNETEpn/uHSeM6tFrHdlKAWzfkAGGNMLtm7IbjSIPYXKc0At2i\npBgHQNKo/ARVS3rwT/J+WmkopIXOOYMgpYZeHVgKeLaw7p9JV/FlViOlDm/xTC6rx7nAP4CLclfN\nb/ON7aGk9OQvlxzX8pL+LOkZpXTZtwL9WusCa6OeLXUtZp2dVjNvKRY+Z8Vt1S5brOOmkibkbrC5\npJZR2XZalm8rBbh1Qw4Q1ggLtQ4i4pWIOCQi1gR2JI3itk3Zsm1RGjrzL6SR2laOiH7AZN5PK92W\naaTkcAMKqcU/HBGfaGX5maSg0mJYLmtXbhkcERHrAp8lDYw0Ktehfyv98IeQ3jbeNKfLbumyae/Y\nauvZUtdiyvOhNfPeISURrPVsybJFFwBXAkPz+BN/KtSvoynArRtygLCGk7SDpLXzvYC5pNTPLamv\nn2fhtNFt+RDpC2d23u7e5PGf25PTOlwHHC/pw/km+VqSWuvyuBD4uaSBkgaQRpWrN434VkpDmPYB\n5pG+kBfkOlxLGlZ1JaX05i2BoC/pvsOcfF+hbIjUMteQUqZ/QynP0ddI41lcVVjmm5LWlbQ8KSPt\nJbkLrtZ4YK/CsrV16EtqAb0paRPScLAtOpoC3LohBwirwgjgBtKXxZ3AHyJiQp53NOmLeI6kNsd9\njohHSOm57yQFlvWAOzpQj1HA0sAjpIGBLiHdoyhzJGkY0oeBScD9uaweq+RtzyONAX0LqdsJ0n2M\nd0j3CWaRRp0DOAlYjnRlfxd1JrKLiBdJLZRDSOnZfwLsEBHFFsK5pBv0z5Eezy0d0yIirs31uInU\nJVj7hNb3gV9JeoUUMMcX1u1QCnDrnpyLyawHkXQzcF5EnN7sulj35xaEmZmVcoAwM7NS3bqLacCA\nATF8+PBmV8PMrFu57777XoiIge0t163z5gwfPpyJEyc2uxpmZt2KpNp3aUq5i8nMzEo5QJiZWSkH\nCDMzK+UAYWZmpRwgzMyslAOEmZmVcoAwM7NSDhBmZlbKAcLMzEp16zeprXXDx15dWj71mO07uSZm\n1l1VGiAkTQVeIQ0YMz8iRubBUS4GhgNTgd0j4uU8uMzvSeMIvw7sFRH3V1m/rshf7GbWVXRGF9NW\nEbFhRIzM02OBGyNiBHBjnoY0uPuI/DMG+GMn1M3MzFrRjHsQOwHj8udxwM6F8nMiuYs0gHtro3+Z\nmVnFqg4QAVwn6T5JY3LZoDxWL6QhEQflz4NJg7y3mJ7LzMysCaq+Sb1FRMyQ9BHgekmPFWdGREjq\n0IAUOdCMARg2bFjjatrFtXZvwsysKpW2ICJiRv49C7gM2AR4vqXrKP+elRefAQwtrD4kl9Vu87SI\nGBkRIwcObHe8CzMzW0SVBQhJH5LUt+Uz8EVgMnAlMDovNhq4In++EhilZDNgbqEryszMOlmVXUyD\ngMvS06ssCVwQEf8j6V5gvKR9gGeA3fPy15AecZ1Cesx17wrrZmZm7agsQETEU8AGJeUvAtuUlAew\nf1X1MTOzjnGqDTMzK+UAYWZmpRwgzMyslAOEmZmVcoAwM7NSDhBmZlbKAcLMzEo5QJiZWSmPKNfL\ntJX0z4MSmVmRA0QTODOrmXUH7mIyM7NSDhBmZlbKAcLMzEr5HoS1q7V7Jr6pbdazuQVhZmalHCDM\nzKyUA4SZmZVygDAzs1K+SV0hvxBnZt2ZA4S9xwHNzIrcxWRmZqUcIMzMrJQDhJmZlXKAMDOzUg4Q\nZmZWygHCzMxKOUCYmVkpBwgzMyvlAGFmZqUcIMzMrJQDhJmZlXKAMDOzUpUHCEl9JD0g6ao8vYak\nuyVNkXSxpKVz+TJ5ekqeP7zqupmZWes6owXxA+DRwvSxwIkRsTbwMrBPLt8HeDmXn5iXMzOzJqk0\nQEgaAmwPnJ6nBWwNXJIXGQfsnD/vlKfJ87fJy5uZWRNU3YI4CfgJsCBPrwzMiYj5eXo6MDh/HgxM\nA8jz5+blFyJpjKSJkibOnj27yrqbmfVqlQUISTsAsyLivkZuNyJOi4iRETFy4MCBjdy0mZkVVDmi\n3ObAjpK2A5YFPgz8HugnacncShgCzMjLzwCGAtMlLQmsCLxYYf3MzKwNlbUgIuKnETEkIoYDXwdu\niog9gQnArnmx0cAV+fOVeZo8/6aIiKrqZ2ZmbWvGexCHAj+UNIV0j+GMXH4GsHIu/yEwtgl1MzOz\nrMoupvdExM3AzfnzU8AmJcu8CezWGfUxM7P2+U1qMzMr5QBhZmalOqWLyXqm4WOvLi2fesz2nVwT\nM6uCWxBmZlbKAcLMzEo5QJiZWSkHCDMzK+UAYWZmpRwgzMyslAOEmZmVcoAwM7NSDhBmZlbKb1I3\nQGtvFJuZdWduQZiZWSkHCDMzK+UAYWZmpRwgzMyslAOEmZmVcoAwM7NSfszVGs4DCZn1DG5BmJlZ\nKQcIMzMr5QBhZmal6goQktaruiJmZta11HuT+g+SlgHOBs6PiLnVVcl6qrZyVvkGtlnXU1cLIiI+\nB+wJDAXuk3SBpC9UWjMzM2uquu9BRMQTwM+BQ4HPAydLekzSV6uqnJmZNU+99yDWl3Qi8CiwNfCV\niPh4/nxihfUzM7MmqfcexP8HTgd+FhFvtBRGxExJP6+kZmZm1lT1BojtgTci4l0ASUsAy0bE6xFx\nbmW1MzOzpqn3HsQNwHKF6eVzmZmZ9VD1BohlI+LVlon8efm2VpC0rKR7JD0k6Z+Sjsjla0i6W9IU\nSRdLWjqXL5Onp+T5wxftkMzMrBHqDRCvSdqoZULSp4E32lge4C1g64jYANgQ2FbSZsCxwIkRsTbw\nMrBPXn4f4OVcfmJezszMmqTeAHEw8FdJt0m6HbgYOKCtFSJpaXUslX+C9OTTJbl8HLBz/rxTnibP\n30aS6qyfmZk1WF03qSPiXkkfA9bJRY9HxDvtrSepD3AfsDZwKvAkMCci5udFpgOD8+fBwLS8v/mS\n5gIrAy/UbHMMMAZg2LBh9VTfzMwWQUeS9W0MrA9sBOwhaVR7K0TEuxGxITAE2AT42CLVcuFtnhYR\nIyNi5MCBAxd3c2Zm1oq6WhCSzgXWAh4E3s3FAZxTz/oRMUfSBOAzQD9JS+ZWxBBgRl5sBimVx3RJ\nSwIrAi/WeyBmZtZY9b4HMRJYNyKi3g1LGgi8k4PDcsAXSDeeJwC7AhcBo4Er8ipX5uk78/ybOrI/\nMzNrrHoDxGRgFeDZDmx7VWBcvg+xBDA+Iq6S9AhwkaQjgQeAM/LyZwDnSpoCvAR8vQP7MjOzBqs3\nQAwAHpF0D+nxVQAiYsfWVoiIh4FPlZQ/RbofUVv+JrBbnfUxM7OK1RsgDq+yEmZm1vXU+5jrLZJW\nB0ZExA2Slgf6VFs1MzNrpnrTfe9Lenntz7loMHB5VZUyM7Pmq/c9iP2BzYF58N7gQR+pqlJmZtZ8\n9QaItyLi7ZaJ/J6CH0E1M+vB6g0Qt0j6GbBcHov6r8Dfq6uWmZk1W70BYiwwG5gEfBe4hjQ+tZmZ\n9VD1PsW0APhL/um1ho+9utlVMDPrNPXmYnqaknsOEbFmw2tkZmZdQkdyMbVYlvTGc//GV8fMzLqK\nuu5BRMSLhZ8ZEXESsH3FdTMzsyaqt4tpo8LkEqQWRb2tDzMz64bq/ZI/vvB5PjAV2L3htTEzsy6j\n3qeYtqq6ImZm1rXU28X0w7bmR8QJjamOmZl1FR15imlj0qhvAF8B7gGeqKJSZmbWfPUGiCHARhHx\nCoCkw4GrI+KbVVXMzMyaq95UG4OAtwvTb+cyMzProeptQZwD3CPpsjy9MzCumiqZmVlXUO9TTEdJ\nuhb4XC7aOyIeqK5aZmbWbPV2MQEsD8yLiN8D0yWtUVGdzMysC6j3MdfDSE8yrQOcBSwFnEcaZc5s\nsbWWKXfqMc7oYtYs9bYgdgF2BF4DiIiZQN+qKmVmZs1Xb4B4OyKCnPJb0oeqq5KZmXUF9T7FNF7S\nn4F+kvYFvk0vHzzIOoe7nsyap96nmH6Xx6KeR7oP8cuIuL7SmpmZWVO1GyAk9QFuyAn7HBTMzHqJ\ndu9BRMS7wAJJK3ZCfczMrIuo9x7Eq8AkSdeTn2QCiIiDKqmVmZk1Xb0B4m/5x8zMeok2A4SkYRHx\n74hw3iUzs16mvXsQl7d8kHRpxXUxM7MupL0AocLnNTuyYUlDJU2Q9Iikf0r6QS7vL+l6SU/k3yvl\nckk6WdIUSQ9L2qhjh2JmZo3UXoCIVj7XYz5wSESsC2wG7C9pXWAscGNEjABuzNMAXwZG5J8xwB87\nuD8zM2ug9m5SbyBpHqklsVz+TJ6OiPhwaytGxLPAs/nzK5IeBQYDOwFb5sXGATcDh+byc3JKj7sk\n9ZO0at6OmZl1sjYDRET0acROJA0HPgXcDQwqfOk/x/sj0w0GphVWm57LFgoQksaQWhgMGzasEdUz\nM7MSHRkPYpFIWgG4FDg4IuYV5xUTANYrIk6LiJERMXLgwIENrKmZmRVVGiAkLUUKDudHRMt7FM9L\nWjXPXxWYlctnAEMLqw/JZWZm1gSVBQhJAs4AHo2IEwqzrgRG58+jgSsK5aPy00ybAXN9/8HMrHnq\nfZN6UWwOfIuUouPBXPYz4BhS+vB9gGeA3fO8a4DtgCnA68DeFdbNeqjW0oODU4SbdVRlASIibmfh\n9yiKtilZPoD9q6qPmZl1TJUtCLPKtNVSMLPGqPwpJjMz654cIMzMrJQDhJmZlXKAMDOzUg4QZmZW\nygHCzMxK+THXEn6E0szMLQgzM2uFA4SZmZVygDAzs1IOEGZmVso3qa3XaO3hA2d5NSvnFoSZmZVy\ngDAzs1IOEGZmVsoBwszMSjlAmJlZKQcIMzMr5QBhZmalHCDMzKyUA4SZmZVygDAzs1IOEGZmVsoB\nwszMSjlAmJlZKQcIMzMr5QBhZmalHCDMzKyUA4SZmZVygDAzs1KVBQhJZ0qaJWlyoay/pOslPZF/\nr5TLJelkSVMkPSxpo6rqZWZm9alyTOqzgVOAcwplY4EbI+IYSWPz9KHAl4ER+WdT4I/5t1nlWhur\nujUew9p6i8paEBFxK/BSTfFOwLj8eRywc6H8nEjuAvpJWrWqupmZWfs6+x7EoIh4Nn9+DhiUPw8G\nphWWm57LPkDSGEkTJU2cPXt2dTU1M+vlmnaTOiICiEVY77SIGBkRIwcOHFhBzczMDDo/QDzf0nWU\nf8/K5TOAoYXlhuQyMzNrks4OEFcCo/Pn0cAVhfJR+WmmzYC5ha4oMzNrgsqeYpJ0IbAlMEDSdOAw\n4BhgvKR9gGeA3fPi1wDbAVOA14G9q6qXmZnVp7IAERF7tDJrm5JlA9i/qrqYmVnH+U1qMzMr5QBh\nZmalqnyT2qxHau3Na79hbT2NWxBmZlbKAcLMzEo5QJiZWSkHCDMzK+UAYWZmpRwgzMyslB9zNWuQ\ntgYe8iOw1h25BWFmZqUcIMzMrJQDhJmZlXKAMDOzUr5JbdZEzutkXZlbEGZmVsoBwszMSjlAmJlZ\nKQcIMzMr5ZvUZp2grbeszboqtyDMzKyUWxBmXZAff7WuwAHCrAdwokCrgruYzMyslFsQZt2Ib3Zb\nZ3ILwszMSjlAmJlZKQcIMzMr5QBhZmalfJParIdr1DsVfjej93GAMLOF+Ekpa9GlAoSkbYHfA32A\n0yPimCZXyazHalQg8Et6PVeXCRCS+gCnAl8ApgP3SroyIh5pbs3MrNHcXdU9dJkAAWwCTImIpwAk\nXQTsBDhAmPUSDhxdS1cKEIOBaYXp6cCmTaqLmTVAZ3RjdVSjbs4vyra6m64UIOoiaQwwJk++Kunx\nBmx2APBCA7bTHfXWY/dx9y7vHbeObdxGG7mtirT27716PSt3pQAxAxhamB6SyxYSEacBpzVyx5Im\nRsTIRm6zu+itx+7j7l183IumK70ody8wQtIakpYGvg5c2eQ6mZn1Wl2mBRER8yUdAPyD9JjrmRHx\nzyZXy8ys1+oyAQIgIq4BrmnCrhvaZdXN9NZj93H3Lj7uRaCIaFRFzMysB+lK9yDMzKwL6fUBQtK2\nkh6XNEXS2GbXpyqSzpQ0S9LkQll/SddLeiL/XqmZdayCpKGSJkh6RNI/Jf0gl/foY5e0rKR7JD2U\nj/uIXL6GpLvz3/vF+YGQHkdSH0kPSLoqT/f445Y0VdIkSQ9KmpjLFuvvvFcHiEJ6jy8D6wJ7SFq3\nubWqzNnAtjVlY4EbI2IEcGOe7mnmA4dExLrAZsD++d+4px/7W8DWEbEBsCGwraTNgGOBEyNibeBl\nYJ8m1rFKPwAeLUz3luPeKiI2LDzaulh/5706QFBI7xERbwMt6T16nIi4FXippngnYFz+PA7YuVMr\n1Qki4tmIuD9/foX0pTGYHn7skbyaJ5fKPwFsDVySy3vccQNIGgJsD5yep0UvOO5WLNbfeW8PEGXp\nPQY3qS7NMCgins2fnwMGNbMyVZM0HPgUcDe94NhzN8uDwCzgeuBJYE5EzM+L9NS/95OAnwAL8vTK\n9I7jDuA6SffljBOwmH/nXeoxV2ueiAhJPfaRNkkrAJcCB0fEvHRRmfTUY4+Id4ENJfUDLgM+1uQq\nVU7SDsCsiLhP0pbNrk8n2yIiZkj6CHC9pMeKMxfl77y3tyDqSu/Rgz0vaVWA/HtWk+tTCUlLkYLD\n+RHxt1zcK44dICLmABOAzwD9JLVcGPbEv/fNgR0lTSV1GW9NGmOmpx83ETEj/55FuiDYhMX8O+/t\nAaK3p/e4EhidP48GrmhiXSqR+5/PAB6NiBMKs3r0sUsamFsOSFqONM7Ko6RAsWterMcdd0T8NCKG\nRMRw0v/nmyJiT3r4cUv6kKS+LZ+BLwKTWcy/817/opyk7Uh9li3pPY5qcpUqIelCYEtSdsfngcOA\ny4HxwDDgGWD3iKi9kd2tSdoCuA2YxPt90j8j3YfosccuaX3STck+pAvB8RHxK0lrkq6s+wMPAN+M\niLeaV9Pq5C6mH0XEDj39uPPxXZYnlwQuiIijJK3MYvyd9/oAYWZm5Xp7F5OZmbXCAcLMzEo5QJiZ\nWSkHCDMzK+UAYWZmpRwgrGEkhaTjC9M/knR4g7Z9tqRd219ysfezm6RHJU2oKV9C0smSJueMmfdK\nWiPPmyrp0sKyu0o6O3/eS9LsnGHzEUn7dqAu/9vBup8t6em8r4ckbVMzf4CkdyTtV1PekgV0Uq7j\nkZKWLdl+P0nf70idrHtzgLBGegv4qqQBza5IUeEN2nrsA+wbEVvVlH8NWA1YPyLWA3YB5hTmf7qN\nTMAXR8SGpPdQfiOprnw4EfHZDtS7xY/zvg4G/lQzbzfgLmCPkvW2yse1CbAm8OeSZfoBDhC9iAOE\nNdJ80hCH/692Rm0LQNKr+feWkm6RdIWkpyQdI2lPpbEMJklaq7CZ/5Q0UdK/cs6dloR0x+Ur+ocl\nfbew3dskXQk8UlKfPfL2J0s6Npf9EtgCOEPScTWrrAo8GxELACJiekS8XJh/PPDfbZ2cnALhSWB1\nSZ/PV/oPKo1b0LekjsVzdLOkSyQ9Jul8FZNJlbuTDyak2wM4BBislPG0rI6vAvsBO0vqXzP7GGCt\nXOfjJK2T/V2/AAADyUlEQVQg6UZJ9+dz+V4mZEm/UBpn5XZJF0r6UTv1tS7Iyfqs0U4FHpb02w6s\nswHwcVI68qeA0yNiE6XBfQ4kXQ0DDCdd4a4FTJC0NjAKmBsRG0taBrhD0nV5+Y2AT0bE08WdSVqN\nND7Ap0ljA1wnaef8pvHWpLdvJ9bUcTxwu6TPkfLqnxcRD9TM/36uU6n8tuuawBTSW877R8QdSokE\n32znHH0K+AQwE7iDlHPo9jaW35b0pnzLvocCq0bEPZLGk1pEx5etmJMZPg2MIL1x3mIs6XxumLe5\nJLBLXn4AcFcOyCOB/yL9uy4F3A/c187xWRfkFoQ1VETMA84BDurAavfmcRveIl1ht3zBTyIFhRbj\nI2JBRDxBCiQfI+WcGaWU1vpuUmrnEXn5e2qDQ7YxcHNEzM4poM8H/qOd45oOrAP8lJSy48aaPv53\ngePy/Fpfy/W7EPhuTnVwB3CCpIOAfoVU1K25J7daFgAPsvB5KTpO0r+AC0hB8L06kIIYpJQTZd1M\nRe21UFqW+Y2kh4EbSC2WQaTgdUVEvJnH4Ph7HduyLsgtCKvCSaSrxrMKZfPJFySSlgCKQz4Wc+Is\nKEwvYOG/0dq8MEH6kjowIv5RnKGUh+e1Rat+uRzArgWulfQ8afCVGwuLnEsKEJNrVr04Ig6o2dYx\nkq4GtiO1er4UEY/RuuI5epfW/+/+OCIukXQgcCaplQQpIKwiac88vZqkETnYLiR3dw0H/tVGfQD2\nBAYCn46Id5QyqH7g5rZ1X25BWMPlK+TxLDys41Te/7LakdT10FG75aeJ1iJ11TwO/AP4nlJKbyR9\nVCmbZVvuAT6fn+rpQ/ryvKWtFSRtlLumWgLc+qTkZ++JiHeAEym5B1OyvbUiYlJEHEvKKtzosRpO\nAZaQ9CVJHwVWiIjBETE8Zzo9mpJWRO7u+gNwec09FoBXgOK9khVJYy+8I2krYPVcfgfwFaVxsVcA\ndmjokVmncYCwqhxPyhzb4i+kL+WHSOMSLMrV/b9JX+7XAvtFxJukYSUfAe6XNJn09E2bLeM8wtZY\nUgroh4D7IqK9NMgfAf6e9/EwqUV0SslyZ7S3/+zgfIP8YeCdfEwNEykL55GkkdX24P1Mny0uZeEA\nMSEf2z2k8/zdkm2+SGrtTM438c8HRkqaRLoX9Fhe7l5SmumH83FNAuY27uisszibq5k1nKQVIuJV\nScsDtwJjWsYGt+7D9yDMrAqn5fdClgXGOTh0T25BmJlZKd+DMDOzUg4QZmZWygHCzMxKOUCYmVkp\nBwgzMyvlAGFmZqX+D+nGvNgzzWndAAAAAElFTkSuQmCC\n",
+      "text/plain": [
+       "<matplotlib.figure.Figure at 0x7f2fceda0fd0>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "plt.hist(snp_counts, bins = np.arange(0,50,1)-.5)\n",
+    "plt.suptitle(\"Number of SNPs in RAD tag in\\nfirst lane of scallop data\")\n",
+    "plt.xlabel(\"Number of SNPs in RAD tag\")\n",
+    "plt.ylabel(\"Frequency\")\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [
     {
